--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CheckList</string>
     <string name="hello">Hello</string>
+    <string name="save">SAVE</string>
 </resources>
