--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">CheckList</string>
-    <string name="hello">Hello</string>
     <string name="save">SAVE</string>
+    <string name="check">Check</string>
+    <string name="item">Item</string>
+    <string name="memo">MEMO</string>
+    <string name="edit">Edit</string>
+    <string name="rename_title">Rename title</string>
+    <string name="title">TITLE</string>
 </resources>
