--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="edit">Edit</string>
     <string name="rename_title">Rename title</string>
     <string name="title">TITLE</string>
+    <string name="delete">Delate</string>
 </resources>
