--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -19,7 +19,7 @@
 
     <!--チェックアウトの警告-->
     <string name="check_out_title">警告</string>
-    <string name="check_out_message">本当にすべてチェックアウトしますか？</string>
+    <string name="check_out_message">チェックした要素をすべて削除しますか？</string>
     <string name="check_out_positive">はい</string>
     <string name="check_out_negative">キャンセル</string>
 
@@ -27,5 +27,10 @@
     <string name="help">ヘルプ</string>
     <string name="settings">設定</string>
     <string name="rename_title" >タイトル編集</string>
+
+    <!--設定画面-->
+    <string name="default_title">デフォルトタイトル名</string>
+    <string name="default_title_explanation">タイトル名を入力しなかったときに設定されるタイトル名です</string>
+    <string name="non_title">タイトル名なし</string>
 
 </resources>
