--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,10 @@
 
     <!--設定画面-->
     <string name="default_title">Default title</string>
-    <string name="default_title_explanation">The title will set when you don\'t enter title name.</string>
     <string name="non_title">Non-title</string>
+
+    <string name="text_size">Text size</string>
+    <string name="small_size">Small</string>
+    <string name="medium_size">Medium</string>
+    <string name="large_size">Large</string>
 </resources>
