--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -37,4 +37,15 @@
     <string name="medium_size">中くらい</string>
     <string name="large_size">大きめ</string>
 
+    <!--ヘルプ画面-->
+    <string name="help_1">これはヘルプ画面です</string>
+    <string name="help_2">チェックをつけると下に行きます</string>
+    <string name="help_3">このアプリでは自動的にセーブされます</string>
+    <string name="help_4">ゴミ箱を押すとチェックのついた欄が削除されます</string>
+    <string name="help_5">欄を左にスワイプするとその欄を削除します</string>
+    <string name="help_6">＋を押すと新たに要素を追加します</string>
+    <string name="help_7">欄をタップすると入力することが出来ます</string>
+    <string name="help_8">一番下の要素でエンターを押すと新たに欄を作ります</string>
+    <string name="help_9">デフォルトタイトルは、タイトル名が空欄である時に設定されるものです</string>
+
 </resources>
