I decided the app name.

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CheckList</string>
+    <string name="app_name">買い物の友</string>
 
     <string name="title">タイトル</string>
     <string name="check">チェック</string>
