--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CheckList</string>
+    <string name="app_name">Shopping Friend</string>
 
     <string name="title">TITLE</string>
     <string name="check">Check</string>
