--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
+    <!--アプリの基本情報-->
     <string name="app_name">Shopping Friend</string>
 
     <string name="title">TITLE</string>
     <string name="check">Check</string>
     <string name="memo">MEMO</string>
+
+    <!--ImageButtonの文字の設定-->
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
 
     <!--タイトル名で削除の警告-->
     <string name="delete_with_title_title">Waring</string>
@@ -34,6 +39,8 @@
     <string name="rename_title" >rename title</string>
 
     <!--設定画面-->
+    <string name="setting_version">1.0</string>
+
     <string name="default_title">Default title(You Can\'t set Empty.)</string>
     <string name="non_title">Non-title</string>
 
