--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -22,6 +22,10 @@
     <string name="edit_title_positive">完了</string>
     <string name="edit_title_negative">キャンセル</string>
 
+    <!--タイトル変更不可画面-->
+    <string name="no_edit_title_message">このタイトルを変更することはできません</string>
+    <string name="no_edit_title_positive">確認</string>
+
     <!--欄を削除した際のスナックバー-->
     <string name="snack_bar_message">欄を一つ削除しました</string>
     <string name="snack_bar_action">元に戻す</string>
