--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -41,6 +41,8 @@
     <string name="help">ヘルプ</string>
     <string name="settings">設定</string>
     <string name="rename_title" >タイトル編集</string>
+    <string name="share">共有</string>
+    <string name="no_value">共有できる要素がありません</string>
 
     <!--設定画面-->
     <string name="setting_version">1.0</string>
@@ -52,6 +54,10 @@
     <string name="small_size">小さめ</string>
     <string name="medium_size">中くらい</string>
     <string name="large_size">大きめ</string>
+
+    <string name="share_all_title">共有の設定</string>
+    <string name="share_all_on">チェックのついた要素のみ共有</string>
+    <string name="share_all_off">全ての要素を共有</string>
 
     <!--ヘルプ画面-->
     <string-array name="help">
