--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="help">help</string>
     <string name="settings">settings</string>
     <string name="rename_title" >rename title</string>
+    <string name="share">share</string>
+    <string name="no_value">There is no value to share</string>
 
     <!--設定画面-->
     <string name="setting_version">1.0</string>
@@ -52,6 +54,10 @@
     <string name="small_size">Small</string>
     <string name="medium_size">Medium</string>
     <string name="large_size">Large</string>
+
+    <string name="share_all_title">Setting of share</string>
+    <string name="share_all_on">Only non-checked column will be shared.</string>
+    <string name="share_all_off">All column will be shared.</string>
 
     <!--ヘルプ画面-->
     <string-array name="help">
