--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -19,6 +19,7 @@
     <!--タイトル変更画面-->
     <string name="edit_title_title">タイトル</string>
     <string name="edit_title_message">タイトル名を入れて下さい</string>
+    <string name="edit_title_hint">タイトル</string>
     <string name="edit_title_positive">完了</string>
     <string name="edit_title_negative">キャンセル</string>
 
@@ -37,7 +38,12 @@
     <string name="check_out_positive">はい</string>
     <string name="check_out_negative">キャンセル</string>
 
+    <!--contentsDescriptionのための文章-->
+    <string name="show_title_recycler_view">新しいリストを追加したり、選択してください</string>
+    <string name="show_contents_recycler_view">チェックリストを確認してください</string>
+
     <!--メニュー画面-->
+    <string name="back">バック</string>
     <string name="help">ヘルプ</string>
     <string name="settings">設定</string>
     <string name="rename_title" >タイトル編集</string>
@@ -46,16 +52,20 @@
     <string name="no_value">共有できる要素がありません</string>
 
     <!--設定画面-->
+    <!--バージョン-->
     <string name="setting_version">1.0</string>
 
+    <!--デフォルトタイトル設定-->
     <string name="default_title">デフォルトタイトル名（空欄はセットできません）</string>
     <string name="non_title">タイトル名なし</string>
 
+    <!--テキストサイズ設定-->
     <string name="text_size">文字の大きさ</string>
     <string name="small_size">小さめ</string>
     <string name="medium_size">中くらい</string>
     <string name="large_size">大きめ</string>
 
+    <!--共有の設定-->
     <string name="share_all_title">共有の設定</string>
     <string name="share_all_on">チェックのついた要素のみ共有</string>
     <string name="share_all_off">全ての要素を共有</string>
