--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!--タイトル変更画面-->
     <string name="edit_title_title">Title</string>
     <string name="edit_title_message">Input the title</string>
+    <string name="edit_title_hint">Title</string>
     <string name="edit_title_positive">OK</string>
     <string name="edit_title_negative">Cancel</string>
 
@@ -37,7 +38,12 @@
     <string name="check_out_positive">Yes</string>
     <string name="check_out_negative">Cancel</string>
 
+    <!--contentsDescriptionのための文章-->
+    <string name="show_title_recycler_view">Please add　or select your list</string>
+    <string name="show_contents_recycler_view">Please check the items</string>
+
     <!--メニュー画面-->
+    <string name="back">back</string>
     <string name="help">help</string>
     <string name="settings">settings</string>
     <string name="rename_title" >rename title</string>
@@ -46,16 +52,20 @@
     <string name="no_value">There is no value to share</string>
 
     <!--設定画面-->
+    <!--バージョン-->
     <string name="setting_version">1.0</string>
 
+    <!--デフォルトタイトル設定-->
     <string name="default_title">Default title(You Can\'t set Empty.)</string>
     <string name="non_title">Non-title</string>
 
+    <!--テキストサイズ設定-->
     <string name="text_size">Text size</string>
     <string name="small_size">Small</string>
     <string name="medium_size">Medium</string>
     <string name="large_size">Large</string>
 
+    <!--共有の設定-->
     <string name="share_all_title">Setting of share</string>
     <string name="share_all_on">Only non-checked item will be shared.</string>
     <string name="share_all_off">All item will be shared.</string>
