--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -48,7 +48,7 @@
     <string name="settings">設定</string>
     <string name="rename_title" >タイトル編集</string>
     <string name="share">共有</string>
-    <string name="list_top">●</string>
+    <string name="list_top">・</string>
     <string name="no_value">共有できる要素がありません</string>
 
     <!--設定画面-->
