--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="share_all_off">All item will be shared.</string>
 
     <!--ヘルプ画面-->
+    <string name="help_title">Help</string>
     <string-array name="help">
         <item>Check off this item and it goes down.</item>
         <item>This app has automatic save function.</item>
